--- a/scss/main.scss
+++ b/scss/main.scss
@@ -175,8 +175,61 @@ body {
         transform: translateY(calc(100% - 12px));
     }
 
+    &__group--checkbox {
+        display: flex;
+        flex-direction: row;
+        gap: 8px;
+        row-gap: 4px;
+        align-items: flex-start;
+        flex-wrap: wrap;
+
+        .checkout-form__label {
+            // In figma it is Inter font-family, I think it's a mistake
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 16px;
+            color: $--black;
+            position: unset;
+            transform: none;
+            padding: 0;
+            flex: 0 0 calc(100% - 28px);
+
+            &>i {
+                color: $--gray;
+                font-style: normal;
+            }
+        }
+    }
+
     &__checkbox {
-        margin-right: 10px;
+        display: none;
+    }
+
+    &__checkbox-styler {
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        cursor: pointer;
+        flex: 0 0 auto;
+
+        // не натиснутий стан
+        &::before {
+            content: '';
+            display: block;
+            width: 20px;
+            height: 20px;
+            background-image: url('data:image/svg+xml;charset=utf-8,<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="0.5" y="0.5" width="19" height="19" rx="3.5" stroke="%2384878C"/></svg>');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-color: transparent;
+            border-radius: 4px;
+        }
+
+        // натиснутий стан
+        &:hover::before,
+        .checkout-form__checkbox:checked+&::before {
+            background-image: url('data:image/svg+xml;charset=utf-8,<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="0.5" y="0.5" width="19" height="19" rx="3.5" fill="%2319191B" stroke="%2319191B"/><path d="M5.5 11L8.95326 13.9599C8.97811 13.9812 9.01599 13.976 9.03415 13.9488L14 6.5" stroke="white" stroke-width="1.6" stroke-linecap="round"/></svg>');
+        }
     }
 
     &__label {
@@ -189,8 +242,13 @@ body {
     }
 
     &__note {
-        font-size: 14px;
-        margin-top: 20px;
+        font-weight: 500;
+        font-size: 9px;
+        line-height: 12px;
+        color: $--black;
+        max-width: 75%;
+        flex: 0 0 100%;
+        margin: 0;
     }
 
     &__submit {
