--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -9,6 +9,7 @@ $--green: #049854;
 $--surface-green: #E2F5EB;
 
 $--gray: #84878C;
+$--gray-footer-text: #6A6A6A;
 $--light-gray: #B0B0B0;
 $--surface-light-grey: #F0F0F0;
 $--red: #F7364D;
