--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,6 +68,7 @@ body {
         flex-direction: column;
         gap: 12px;
         width: 100%;
+        padding-bottom: 150px;
     }
 
     &__title {
@@ -251,18 +252,38 @@ body {
         margin: 0;
     }
 
-    &__submit {
-        padding: 10px 20px;
-        background-color: $primary-color;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+    &__footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 12px 16px 34px;
+        gap: 12px;
 
-        &:hover {
-            background-color: darken($primary-color, 10%);
-        }
+        background: linear-gradient(180deg, rgba(246, 246, 246, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%);
+        backdrop-filter: blur(8px);
+
+        position: fixed;
+        bottom: 0;
+        left: 0;
+    }
+
+    &__submit {
+        padding: 16px 40px;
+        gap: 12px;
+        background: $--black;
+        border-radius: 40px;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 100%;
+        color: $--white;
+        width: 100%;
+    }
+
+    &__footer-text {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        text-align: center;
+        color: $--gray-footer-text;
     }
 }
