fix country with Poland value

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -107,6 +107,12 @@ body {
         outline: none;
         box-sizing: border-box;
 
+        &#country,
+        &#otherCountry {
+            pointer-events: none;
+            cursor: not-allowed;
+        }
+
         &.validated {
             background: $--surface-green;
 
